GMLDotParser.java
// Generated from GMLDot.g4 by ANTLR 4.5

        import java.util.HashMap;
        import java.util.ArrayList;
        import java.util.Set;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GMLDotParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, VALUE=14, NUMBER=15, INT=16, WORD=17, 
		CHAR=18, STRING=19, WS=20;
	public static final int
		RULE_r = 0, RULE_graph = 1, RULE_node = 2, RULE_edge = 3, RULE_graphAttrDeclaration = 4, 
		RULE_nodeAttrDeclarations = 5, RULE_edgeAttrDeclarations = 6, RULE_nodeAttrDeclaration = 7, 
		RULE_edgeAttrDeclaration = 8, RULE_graphAttribute = 9, RULE_nodeAttribute = 10, 
		RULE_edgeAttribute = 11, RULE_unsupportedAttribute = 12, RULE_section = 13;
	public static final String[] ruleNames = {
		"r", "graph", "node", "edge", "graphAttrDeclaration", "nodeAttrDeclarations", 
		"edgeAttrDeclarations", "nodeAttrDeclaration", "edgeAttrDeclaration", 
		"graphAttribute", "nodeAttribute", "edgeAttribute", "unsupportedAttribute", 
		"section"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'graph'", "'['", "']'", "'node'", "'edge'", "'label'", "'directed'", 
		"'comment'", "'URL'", "'id'", "'name'", "'source'", "'target'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "VALUE", "NUMBER", "INT", "WORD", "CHAR", "STRING", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GMLDot.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	        
	        class Node {
	                private HashMap<String, String> attributes;
	                
	                public Node(HashMap<String, String> attributes){
	                        this.attributes = attributes;
	                }
	        }
	        
	        
	        class Edge {
	                private HashMap<String, String> attributes;
	                
	                public Edge(HashMap<String, String> attributes){
	                        this.attributes = attributes;
	                }
	        }
	        
	        
	        class Graph {
	                private ArrayList<Node> nodes;
	                private ArrayList<Edge> edges;
	                private HashMap<String, String> attributes;
	                
	                public Graph(ArrayList<Node> nodes, ArrayList<Edge> edges,
	                         HashMap<String, String> attributes){
	                        this.nodes = nodes;
	                        this.edges = edges;
	                        this.attributes = new HashMap<String, String>();
	                        this.attributes.put("directed", "0");
	                        this.attributes.putAll(attributes);
	                }

	                
	                private void toDot(){
	                        
	                        boolean directed = this.attributes.get("directed").equals("1");
	                        if (directed){
	                                System.out.println("digraph G {");
	                        }   
	                        else{
	                                System.out.println("graph G {");
	                        }   

	                        this.attributes.remove("directed");
	                        
	                        
	                        Set<String> keys = attributes.keySet();
	                        for(String key: keys){
	                                System.out.println("\t" + key + " = " + attributes.get(key) + ";");
	                        }   
	                        
	                        
	                        for (Node node: nodes){
	                                String nodeString = "\t" + node.attributes.get("id") + " ["; 
	                                node.attributes.remove("id");
	                                keys = node.attributes.keySet();  //get all keys
	                                for(String key: keys)
	                                {   
	                                        nodeString +=  key + " = " + node.attributes.get(key) + ", ";
	                                }   
	                                if (keys.size() > 0)
	                                        nodeString = nodeString.substring(0, nodeString.length()-2);
	                                nodeString += "];\n";
	                                System.out.print(nodeString);
	                        }
	                        
	                        
	                        for (Edge edge: edges){
	                                String edgeString;
	                                if (directed) {
	                                        edgeString = "\t" + edge.attributes.get("source")
	                                                + " -> " + edge.attributes.get("target") + " [";
	                                }
	                                else {
	                                        edgeString = "\t" + edge.attributes.get("source")
	                                                + " -- " + edge.attributes.get("target") + " [";
	                                }
	                                edge.attributes.remove("source");
	                                edge.attributes.remove("target");
	                                keys = edge.attributes.keySet();  //get all keys
	                                for(String key: keys)
	                                {
	                                        edgeString +=  key + " = " + edge.attributes.get(key) + ", ";
	                                }
	                                if (keys.size() > 0)
	                                        edgeString = edgeString.substring(0, edgeString.length()-2);
	                                edgeString += "];\n";
	                                System.out.print(edgeString);
	                        }
	                        
	                        System.out.println("}");
	                }
	                        
	        }
	        

	public GMLDotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public GraphContext graph() {
			return getRuleContext(GraphContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			graph();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphContext extends ParserRuleContext {
		public NodeContext node;
		public EdgeContext edge;
		public GraphAttrDeclarationContext graphAttrDeclaration;
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public List<GraphAttrDeclarationContext> graphAttrDeclaration() {
			return getRuleContexts(GraphAttrDeclarationContext.class);
		}
		public GraphAttrDeclarationContext graphAttrDeclaration(int i) {
			return getRuleContext(GraphAttrDeclarationContext.class,i);
		}
		public GraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterGraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitGraph(this);
		}
	}

	public final GraphContext graph() throws RecognitionException {
		GraphContext _localctx = new GraphContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_graph);
		ArrayList<Node> nodes = new ArrayList<Node>(); 
		        ArrayList<Edge> edges = new ArrayList<Edge>(); 
		        HashMap<String, String> declarations = new HashMap<String, String>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__0);
			setState(31);
			match(T__1);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << WORD))) != 0)) {
				{
				setState(41);
				switch (_input.LA(1)) {
				case T__3:
					{
					setState(32);
					((GraphContext)_localctx).node = node();

					                nodes.add(((GraphContext)_localctx).node._node);
					        
					}
					break;
				case T__4:
					{
					setState(35);
					((GraphContext)_localctx).edge = edge();

					                edges.add(((GraphContext)_localctx).edge._edge);
					        
					}
					break;
				case T__5:
				case T__6:
				case T__7:
				case T__8:
				case WORD:
					{
					setState(38);
					((GraphContext)_localctx).graphAttrDeclaration = graphAttrDeclaration();

					                declarations.putAll(((GraphContext)_localctx).graphAttrDeclaration.declaration);
					        
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(T__2);

			        Graph graph = new Graph(nodes, edges, declarations);
			        graph.toDot();

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public Node _node;
		public NodeAttrDeclarationsContext nodeAttrDeclarations;
		public NodeAttrDeclarationsContext nodeAttrDeclarations() {
			return getRuleContext(NodeAttrDeclarationsContext.class,0);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitNode(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__3);
			setState(50);
			match(T__1);
			setState(51);
			((NodeContext)_localctx).nodeAttrDeclarations = nodeAttrDeclarations();
			setState(52);
			match(T__2);

			        ((NodeContext)_localctx)._node =  new Node(((NodeContext)_localctx).nodeAttrDeclarations.declarations);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public Edge _edge;
		public EdgeAttrDeclarationsContext edgeAttrDeclarations;
		public EdgeAttrDeclarationsContext edgeAttrDeclarations() {
			return getRuleContext(EdgeAttrDeclarationsContext.class,0);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitEdge(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_edge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(T__4);
			setState(56);
			match(T__1);
			setState(57);
			((EdgeContext)_localctx).edgeAttrDeclarations = edgeAttrDeclarations();
			setState(58);
			match(T__2);

			        ((EdgeContext)_localctx)._edge =  new Edge(((EdgeContext)_localctx).edgeAttrDeclarations.declarations);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphAttrDeclarationContext extends ParserRuleContext {
		public HashMap<String, String> declaration;
		public GraphAttributeContext graphAttribute;
		public Token VALUE;
		public UnsupportedAttributeContext unsupportedAttribute;
		public GraphAttributeContext graphAttribute() {
			return getRuleContext(GraphAttributeContext.class,0);
		}
		public TerminalNode VALUE() { return getToken(GMLDotParser.VALUE, 0); }
		public UnsupportedAttributeContext unsupportedAttribute() {
			return getRuleContext(UnsupportedAttributeContext.class,0);
		}
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public GraphAttrDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphAttrDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterGraphAttrDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitGraphAttrDeclaration(this);
		}
	}

	public final GraphAttrDeclarationContext graphAttrDeclaration() throws RecognitionException {
		GraphAttrDeclarationContext _localctx = new GraphAttrDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_graphAttrDeclaration);
		((GraphAttrDeclarationContext)_localctx).declaration =  new HashMap<String, String>();
		try {
			setState(73);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(61);
				((GraphAttrDeclarationContext)_localctx).graphAttribute = graphAttribute();
				setState(62);
				((GraphAttrDeclarationContext)_localctx).VALUE = match(VALUE);
				}

				        _localctx.declaration.put((((GraphAttrDeclarationContext)_localctx).graphAttribute!=null?_input.getText(((GraphAttrDeclarationContext)_localctx).graphAttribute.start,((GraphAttrDeclarationContext)_localctx).graphAttribute.stop):null), (((GraphAttrDeclarationContext)_localctx).VALUE!=null?((GraphAttrDeclarationContext)_localctx).VALUE.getText():null));

				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(66);
				((GraphAttrDeclarationContext)_localctx).unsupportedAttribute = unsupportedAttribute();
				setState(69);
				switch (_input.LA(1)) {
				case VALUE:
					{
					setState(67);
					match(VALUE);
					}
					break;
				case T__1:
					{
					setState(68);
					section();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}

				        System.out.printf("//Warning: the graph attribute \"%s\" was parsed but is not "
				                + "supported by DOT,so it will not be translated.\n", (((GraphAttrDeclarationContext)_localctx).unsupportedAttribute!=null?_input.getText(((GraphAttrDeclarationContext)_localctx).unsupportedAttribute.start,((GraphAttrDeclarationContext)_localctx).unsupportedAttribute.stop):null));

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeAttrDeclarationsContext extends ParserRuleContext {
		public HashMap<String, String> declarations;
		public NodeAttrDeclarationContext nodeAttrDeclaration;
		public List<NodeAttrDeclarationContext> nodeAttrDeclaration() {
			return getRuleContexts(NodeAttrDeclarationContext.class);
		}
		public NodeAttrDeclarationContext nodeAttrDeclaration(int i) {
			return getRuleContext(NodeAttrDeclarationContext.class,i);
		}
		public NodeAttrDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeAttrDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterNodeAttrDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitNodeAttrDeclarations(this);
		}
	}

	public final NodeAttrDeclarationsContext nodeAttrDeclarations() throws RecognitionException {
		NodeAttrDeclarationsContext _localctx = new NodeAttrDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nodeAttrDeclarations);
		 ((NodeAttrDeclarationsContext)_localctx).declarations =  new HashMap<String, String>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << WORD))) != 0)) {
				{
				{
				setState(75);
				((NodeAttrDeclarationsContext)_localctx).nodeAttrDeclaration = nodeAttrDeclaration();
				_localctx.declarations.putAll(((NodeAttrDeclarationsContext)_localctx).nodeAttrDeclaration.declaration);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeAttrDeclarationsContext extends ParserRuleContext {
		public HashMap<String, String> declarations;
		public EdgeAttrDeclarationContext edgeAttrDeclaration;
		public List<EdgeAttrDeclarationContext> edgeAttrDeclaration() {
			return getRuleContexts(EdgeAttrDeclarationContext.class);
		}
		public EdgeAttrDeclarationContext edgeAttrDeclaration(int i) {
			return getRuleContext(EdgeAttrDeclarationContext.class,i);
		}
		public EdgeAttrDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edgeAttrDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterEdgeAttrDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitEdgeAttrDeclarations(this);
		}
	}

	public final EdgeAttrDeclarationsContext edgeAttrDeclarations() throws RecognitionException {
		EdgeAttrDeclarationsContext _localctx = new EdgeAttrDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_edgeAttrDeclarations);
		 ((EdgeAttrDeclarationsContext)_localctx).declarations =  new HashMap<String, String>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__7) | (1L << T__11) | (1L << T__12) | (1L << WORD))) != 0)) {
				{
				{
				setState(83);
				((EdgeAttrDeclarationsContext)_localctx).edgeAttrDeclaration = edgeAttrDeclaration();
				_localctx.declarations.putAll(((EdgeAttrDeclarationsContext)_localctx).edgeAttrDeclaration.declaration);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeAttrDeclarationContext extends ParserRuleContext {
		public HashMap<String, String> declaration;
		public NodeAttributeContext nodeAttribute;
		public Token VALUE;
		public UnsupportedAttributeContext unsupportedAttribute;
		public NodeAttributeContext nodeAttribute() {
			return getRuleContext(NodeAttributeContext.class,0);
		}
		public TerminalNode VALUE() { return getToken(GMLDotParser.VALUE, 0); }
		public UnsupportedAttributeContext unsupportedAttribute() {
			return getRuleContext(UnsupportedAttributeContext.class,0);
		}
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public NodeAttrDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeAttrDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterNodeAttrDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitNodeAttrDeclaration(this);
		}
	}

	public final NodeAttrDeclarationContext nodeAttrDeclaration() throws RecognitionException {
		NodeAttrDeclarationContext _localctx = new NodeAttrDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nodeAttrDeclaration);
		 ((NodeAttrDeclarationContext)_localctx).declaration =  new HashMap<String, String>(); 
		try {
			setState(103);
			switch (_input.LA(1)) {
			case T__5:
			case T__7:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(91);
				((NodeAttrDeclarationContext)_localctx).nodeAttribute = nodeAttribute();
				setState(92);
				((NodeAttrDeclarationContext)_localctx).VALUE = match(VALUE);
				}

				        _localctx.declaration.put((((NodeAttrDeclarationContext)_localctx).nodeAttribute!=null?_input.getText(((NodeAttrDeclarationContext)_localctx).nodeAttribute.start,((NodeAttrDeclarationContext)_localctx).nodeAttribute.stop):null), (((NodeAttrDeclarationContext)_localctx).VALUE!=null?((NodeAttrDeclarationContext)_localctx).VALUE.getText():null));

				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(96);
				((NodeAttrDeclarationContext)_localctx).unsupportedAttribute = unsupportedAttribute();
				setState(99);
				switch (_input.LA(1)) {
				case VALUE:
					{
					setState(97);
					match(VALUE);
					}
					break;
				case T__1:
					{
					setState(98);
					section();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}

				        System.out.printf("//Warning: the node attribute \"%s\" was parsed but is not"
				                + " supported by DOT,so it will not be translated.\n", (((NodeAttrDeclarationContext)_localctx).unsupportedAttribute!=null?_input.getText(((NodeAttrDeclarationContext)_localctx).unsupportedAttribute.start,((NodeAttrDeclarationContext)_localctx).unsupportedAttribute.stop):null));

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeAttrDeclarationContext extends ParserRuleContext {
		public HashMap<String, String> declaration;
		public EdgeAttributeContext edgeAttribute;
		public Token VALUE;
		public UnsupportedAttributeContext unsupportedAttribute;
		public EdgeAttributeContext edgeAttribute() {
			return getRuleContext(EdgeAttributeContext.class,0);
		}
		public TerminalNode VALUE() { return getToken(GMLDotParser.VALUE, 0); }
		public UnsupportedAttributeContext unsupportedAttribute() {
			return getRuleContext(UnsupportedAttributeContext.class,0);
		}
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public EdgeAttrDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edgeAttrDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).enterEdgeAttrDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GMLDotListener ) ((GMLDotListener)listener).exitEdgeAttrDeclaration(this);
		}
	}

	public final EdgeAttrDeclarationContext edgeAttrDeclaration() throws RecognitionException {
		EdgeAttrDeclarationContext _localctx = new EdgeAttrDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_edgeAttrDeclaration);
		 ((EdgeAttrDeclarationContext)_localctx).declaration =  new HashMap<String, String>(); 
		try {
			setState(117);
			switch (_input.LA(1)) {
			case T__5:
			case T__7:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(105);
				((EdgeAttrDeclarationContext)_localctx).edgeAttribute = edgeAttribute();
				setState(106);
				((EdgeAttrDeclarationContext)_localctx).VALUE = match(VALUE);
				}

				        _localctx.declaration.put((((EdgeAttrDeclarationContext)_localctx).edgeAttribute!=null?_input.getText(((EdgeAttrDeclarationContext)_localctx).edgeAttribute.start,((EdgeAttrDeclarationContext)_localctx).edgeAttribute.stop):null), (((EdgeAttrDeclarationContext)_localctx).VALUE!=null?((EdgeAttrDeclarationContext)_localctx).VALUE.getText():null));
